# ot-harjoitustyo

./:  .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
dokumentaatio/drawio/: pakkauskaavio.drawio
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: HSL_sekvennsi.md  machine_sekvenssi.md  monopoli_UML.md  monopoli_UML_laajennettu.md
src/: db.py  index.py  init_db.py
src/entities/: account.py  base_entity.py  user.py
src/repositories/: account_repository.py  password_repository.py  user_repository.py
src/services/: account_service.py  user_service.py
src/tests/: account_service_test.py  common_test.py  user_service_test.py
src/ui/: base_view.py  login_view.py  main_view.py  register_view.py  ui.py
src/utils/: __init__.py  encryption_utils.py
