[tool.poetry]
name = "ot-harjotustyo"
version = "0.1.0"
description = ""
authors = ["Niilo Kurki <niilo.kurki@helsinki.fi>"]
readme = "README.md"
packages = [{include = "ot_harjotustyo"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
